[project]
name = "gemma-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.8",
    "docx2txt>=0.9",
    "llama-index>=0.12.34",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-readers-file>=0.4.7",
    "llama-index-vector-stores-chroma>=0.4.1",
    "nbconvert>=7.16.6",
    "openai-whisper",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "python-pptx>=1.0.2",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "unstructured>=0.17.2",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
